--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
           </ul>
           <ul class="navigation__socials">
             <li class="navigation__social">
-              Instagram<spam class="line">|</spam>
+              Instagram<span class="line">|</span>
             </li>
             <li class="navigation__social">
-              Twitter<spam class="line">|</spam>
+              Twitter<span class="line">|</span>
             </li>
             <li class="navigation__socal">
-              Facebook<spam class="line">|</spam>
+              Facebook<span class="line">|</span>
             </li>
             <li class="navigation__social">Linkedin</li>
           </ul>
