--- a/index.html
+++ b/index.html
@@ -27,107 +27,114 @@
     <header class="header">
       <!-- Навігація по сайту -->
       <div class="container header__container">
-        <a href="./index.html" class="logo">
-          Web<span class="logo--black">Studio</span>
-        </a>
         <nav class="navigation">
-          <ul class="navigation__choiсe">
-            <li class="navigation__item">
-              <a
-                href="./index.html"
-                class="navigation__link navigation__link--current"
-              >
-                Студія
-              </a>
-            </li>
-            <li class="navigation__item">
-              <a href="./portfolio.html" class="navigation__link">Портфоліо</a>
-            </li>
-            <li class="navigation__item">
-              <a href="#" class="navigation__link">Контакти</a>
-            </li>
-          </ul>
+          <div class="navigation__logo">
+            <a href="./index.html" class="logo">
+              Web<span class="logo--black">Studio</span>
+            </a>
+          </div>
+          <div class="navigation__desk">
+            <ul class="navigation__choiсe">
+              <li class="navigation__item">
+                <a
+                  href="./index.html"
+                  class="navigation__link navigation__link--current"
+                >
+                  Студія
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="./portfolio.html" class="navigation__link"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Контакти</a>
+              </li>
+            </ul>
 
-          <ul class="navigation__contacts">
-            <li class="navigation__item">
-              <a href="mailto:info@devstudio.com" class="navigation__mail">
-                <svg class="navigation__mail--icon" width="16" height="12">
-                  <text>mail</text>
-                  <use href="./images/icons.svg#icon-mail"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="navigation__item">
-              <a href="tel:+380961111111" class="navigation__tel">
-                <svg class="navigation__tel--icon" width="10" height="16">
-                  <text>smartphone</text>
-                  <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <button
-          type="button"
-          class="navigation__button is-open"
-          aria-expended="false"
-          aria-controls="menu-container"
-          data-menu-button
-        >
-          <svg width="40" height="40" aria-label="Мобільне меню">
-            <use
-              class="icon__cross"
-              href="./images/icons.svg#icon-menu_40px"
-            ></use>
-            <use
-              class="icon__menu"
-              href="./images/icons.svg#icon-close_40px"
-            ></use>
-          </svg>
-        </button>
-        <nav class="navigation__mobile" id="menu-container" data-menu>
-          <ul class="navigation__choiсe">
-            <li class="navigation__item">
-              <a
-                href="./index.html"
-                class="navigation__link navigation__link--current"
-              >
-                Студія
-              </a>
-            </li>
-            <li class="navigation__item">
-              <a href="./portfolio.html" class="navigation__link">Портфоліо</a>
-            </li>
-            <li class="navigation__item">
-              <a href="#" class="navigation__link">Контакти</a>
-            </li>
-          </ul>
-          <ul class="navigation__contacts">
-            <li class="navigation__item">
-              <a href="tel:+380961111111" class="navigation__tel">
-                +38 096 111 11 11
-              </a>
-            </li>
-            <li class="navigation__item">
-              <a href="mailto:info@devstudio.com" class="navigation__mail">
-                info@devstudio.com
-              </a>
-            </li>
-          </ul>
-          <ul class="navigation__socials">
-            <li class="navigation__social">
-              Instagram<span class="line">|</span>
-            </li>
-            <li class="navigation__social">
-              Twitter<span class="line">|</span>
-            </li>
-            <li class="navigation__socal">
-              Facebook<span class="line">|</span>
-            </li>
-            <li class="navigation__social">Linkedin</li>
-          </ul>
+            <ul class="navigation__contacts">
+              <li class="navigation__item">
+                <a href="mailto:info@devstudio.com" class="navigation__mail">
+                  <svg class="navigation__mail--icon" width="16" height="12">
+                    <text>mail</text>
+                    <use href="./images/icons.svg#icon-mail"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="tel:+380961111111" class="navigation__tel">
+                  <svg class="navigation__tel--icon" width="10" height="16">
+                    <text>smartphone</text>
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </div>
+          <button
+            type="button"
+            class="navigation__button is-open"
+            aria-controls="menu-container"
+            data-menu-button
+          >
+            <svg width="40" height="40" aria-label="Мобільне меню">
+              <use
+                class="icon__cross"
+                href="./images/icons.svg#icon-menu_40px"
+              ></use>
+              <use
+                class="icon__menu"
+                href="./images/icons.svg#icon-close_40px"
+              ></use>
+            </svg>
+          </button>
+          <div class="navigation__mobile" id="menu-container" data-menu>
+            <ul class="navigation__choiсe">
+              <li class="navigation__item">
+                <a
+                  href="./index.html"
+                  class="navigation__link navigation__link--current"
+                >
+                  Студія
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="./portfolio.html" class="navigation__link"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Контакти</a>
+              </li>
+            </ul>
+            <ul class="navigation__contacts">
+              <li class="navigation__item">
+                <a href="tel:+380961111111" class="navigation__tel">
+                  +38 096 111 11 11
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="mailto:info@devstudio.com" class="navigation__mail">
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
+            <ul class="navigation__socials">
+              <li class="navigation__social">
+                Instagram<span class="line">|</span>
+              </li>
+              <li class="navigation__social">
+                Twitter<span class="line">|</span>
+              </li>
+              <li class="navigation__socal">
+                Facebook<span class="line">|</span>
+              </li>
+              <li class="navigation__social">Linkedin</li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
@@ -298,14 +305,21 @@
           <h2 class="doing__title">Чим ми займаємося</h2>
           <ul class="doing__items">
             <li class="doing__item">
-              <img src="./images/img1.jpg" alt="Код" width="370" height="294" />
+              <img
+                srcset="./images/img1_1x.jpg 1x, ./images/img1_2x.jpg 2x"
+                src="./images/img1_1x.jpg"
+                alt="Код"
+                width="370"
+                height="294"
+              />
               <div class="doing__variation">
                 <h3 class="doing__name">ДЕСКТОПНІ ДОДАТКИ</h3>
               </div>
             </li>
             <li class="doing__item">
               <img
-                src="./images/img2.jpg"
+                srcset="./images/img2_1x.jpg 1x, ./images/img2_2x.jpg 2x"
+                src="./images/img2_1x.jpg"
                 alt="Мобільний"
                 width="370"
                 height="294"
@@ -316,7 +330,8 @@
             </li>
             <li class="doing__item">
               <img
-                src="./images/img3.jpg"
+                srcset="./images/img3_1x.jpg 1x, ./images/img3_2x.jpg 2x"
+                src="./images/img1_1x.jpg"
                 alt="Планшет"
                 width="370"
                 height="294"
@@ -337,28 +352,32 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="
-                    ./images/photo1_mob_1x.jpg 1x,
-                    ./images/photo1_mob_2x.jpg 2x
-                  "
-                  sizes="(max-width: 767px) 450px 100vw"
-                />
-                <source
-                  srcset="
-                    ./images/photo1_tab_1x.jpg 1x,
-                    ./images/photo1_tab_2x.jpg 2x
-                  "
-                  sizes="(min-width: 768px) 354px 100vw"
-                />
-                <source
+                  media="(min-width: 1200px)"
                   srcset="
                     ./images/photo1_des_1x.jpg 1x,
                     ./images/photo1_des_2x.jpg 2x
                   "
-                  sizes="(min-width: 1200px) 270px 100vw"
+                  type="image/jpg"
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/photo1_tab_1x.jpg 1x,
+                    ./images/photo1_tab_2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/photo1_mob_1x.jpg 1x,
+                    ./images/photo1_mob_2x.jpg 2x
+                  "
+                  type="image/jpg"
                 />
                 <img
-                  src="./images/photo1_mob_1x.jpg"
+                  src="./images/photo1_des_1x.jpg"
                   alt="на фото Ігор Дем'яненко"
                 />
               </picture>
@@ -418,28 +437,32 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="
-                    ./images/photo2_mob_1x.jpg 1x,
-                    ./images/photo2_mob_2x.jpg 2x
-                  "
-                  sizes="(max-width: 767px) 450px 100vw"
-                />
-                <source
-                  srcset="
-                    ./images/photo2_tab_1x.jpg 1x,
-                    ./images/photo2_tab_2x.jpg 2x
-                  "
-                  sizes="(min-width: 768px) 354px 100vw"
-                />
-                <source
+                  media="(min-width: 1200px)"
                   srcset="
                     ./images/photo2_des_1x.jpg 1x,
                     ./images/photo2_des_2x.jpg 2x
                   "
-                  sizes="(min-width: 1200px) 270px 100vw"
+                  type="image/jpg"
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/photo2_tab_1x.jpg 1x,
+                    ./images/photo2_tab_2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/photo2_mob_1x.jpg 1x,
+                    ./images/photo2_mob_2x.jpg 2x
+                  "
+                  type="image/jpg"
                 />
                 <img
-                  src="./images/photo2_mob_1x.jpg"
+                  src="./images/photo2_des_1x.jpg"
                   alt="на фото Ольга Репіна"
                 />
               </picture>
@@ -499,28 +522,32 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="
-                    ./images/photo3_mob_1x.jpg 1x,
-                    ./images/photo3_mob_2x.jpg 2x
-                  "
-                  sizes="(max-width: 767px) 450px 100vw"
-                />
-                <source
-                  srcset="
-                    ./images/photo3_tab_1x.jpg 1x,
-                    ./images/photo3_tab_2x.jpg 2x
-                  "
-                  sizes="(min-width: 768px) 354px 100vw"
-                />
-                <source
+                  media="(min-width: 1200px)"
                   srcset="
                     ./images/photo3_des_1x.jpg 1x,
                     ./images/photo3_des_2x.jpg 2x
                   "
-                  sizes="(min-width: 1200px) 270px 100vw"
+                  type="image/jpg"
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/photo3_tab_1x.jpg 1x,
+                    ./images/photo3_tab_2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/photo3_mob_1x.jpg 1x,
+                    ./images/photo3_mob_2x.jpg 2x
+                  "
+                  type="image/jpg"
                 />
                 <img
-                  src="./images/photo3_mob_1x.jpg"
+                  src="./images/photo3_des_1x.jpg"
                   alt="на фото Микола Тарасов"
                 />
               </picture>
@@ -580,28 +607,32 @@
             <li class="team__item">
               <picture>
                 <source
-                  srcset="
-                    ./images/photo4_mob_1x.jpg 1x,
-                    ./images/photo4_mob_2x.jpg 2x
-                  "
-                  sizes="(max-width: 767px) 450px 100vw"
-                />
-                <source
-                  srcset="
-                    ./images/photo4_tab_1x.jpg 1x,
-                    ./images/photo4_tab_2x.jpg 2x
-                  "
-                  sizes="(min-width: 768px) 354px 100vw"
-                />
-                <source
+                  media="(min-width: 1200px)"
                   srcset="
                     ./images/photo4_des_1x.jpg 1x,
                     ./images/photo4_des_2x.jpg 2x
                   "
-                  sizes="(min-width: 1200px) 270px 100vw"
+                  type="image/jpg"
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/photo4_tab_1x.jpg 1x,
+                    ./images/photo4_tab_2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/photo4_mob_1x.jpg 1x,
+                    ./images/photo4_mob_2x.jpg 2x
+                  "
+                  type="image/jpg"
                 />
                 <img
-                  src="./images/photo4_mob_1x.jpg"
+                  src="./images/photo4_des_1x.jpg"
                   alt="на фото Михайло Єрмаков"
                 />
               </picture>
